# JLinealgCpp

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Tools/: VectorTools.h
src/logging/: Logger.h
src/objects/: Matrix.h  Span.h  Vector.h
src/objects/Matrix/: AugmentedMatrixClasses.cpp  ComponentPPProxy.cpp  Matrix.cpp  Matrix.h  Matrix_QR_methods.cpp  Matrix_operations.cpp  Matrix_operators.cpp
src/objects/Span/: ComponentPProxy.cpp  Span.cpp  Span.h  Span_operators.cpp  VectorProxy.cpp
src/objects/Vector/: ComponentProxy.cpp  DoubleProxy.cpp  Vector.cpp  Vector.h  Vector_operators.cpp
src/objects_OLD/Matrix/: ComponentPPProxy.cpp  Matrix.cpp  Matrix.h  Matrix_QR_methods.cpp  Matrix_operations.cpp  Matrix_operators.cpp
src/objects_OLD/Span/: ComponentPProxy.cpp  Span.cpp  Span.h  Span_operators.cpp  VectorProxy.cpp
src/objects_OLD/Vector/: ComponentProxy.cpp  Vector.cpp  Vector.h  Vector_operators.cpp
